--- a/src/main/webapp/coderrect.css
+++ b/src/main/webapp/coderrect.css
@@ -116,3 +116,18 @@ pre {
 .modal {
     max-width: 1000px;
 }
+
+span.view {
+    margin-right: 20px;
+    font-weight: bold;
+    cursor: pointer;
+    color: blue;
+}
+
+div.message {
+      width: 500px;
+      margin-top: 100px;
+      margin: auto;
+      text-align: center;
+}
+
